; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/bnep/extr_core.c_bnep_ctrl_set_netfilter.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/bnep/extr_core.c_bnep_ctrl_set_netfilter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnep_session = type { %struct.bnep_proto_filter* }
%struct.bnep_proto_filter = type { i8*, i8* }

@EILSEQ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"filter len %d\00", align 1
@BNEP_FILTER_NET_TYPE_RSP = common dso_local global i32 0, align 4
@BNEP_FILTER_UNSUPPORTED_REQ = common dso_local global i32 0, align 4
@BNEP_FILTER_LIMIT_REACHED = common dso_local global i32 0, align 4
@BNEP_MAX_PROTO_FILTERS = common dso_local global i32 0, align 4
@BNEP_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnep_session*, i32*, i32)* @bnep_ctrl_set_netfilter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnep_ctrl_set_netfilter(%struct.bnep_session* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.bnep_session*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.bnep_session* %0, %struct.bnep_session** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = icmp slt i32 %9, 2
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load i32, i32* @EILSEQ, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %4, align 4
  br label %35

14:                                               ; preds = %3
  %15 = load i32*, i32** %6, align 8
  %16 = call i8* @get_unaligned_be16(i32* %15)
  %17 = ptrtoint i8* %16 to i32
  store i32 %17, i32* %8, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = getelementptr inbounds i32, i32* %18, i32 1
  store i32* %19, i32** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = sub nsw i32 %20, 2
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %14
  %26 = load i32, i32* @EILSEQ, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %4, align 4
  br label %35

28:                                               ; preds = %14
  %29 = load i32, i32* %8, align 4
  %30 = call i32 (i8*, i32, ...) @BT_DBG(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %29)
  %31 = load %struct.bnep_session*, %struct.bnep_session** %5, align 8
  %32 = load i32, i32* @BNEP_FILTER_NET_TYPE_RSP, align 4
  %33 = load i32, i32* @BNEP_FILTER_UNSUPPORTED_REQ, align 4
  %34 = call i32 @bnep_send_rsp(%struct.bnep_session* %31, i32 %32, i32 %33)
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %28, %25, %11
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i8* @get_unaligned_be16(i32*) #1

declare dso_local i32 @BT_DBG(i8*, i32, ...) #1

declare dso_local i32 @bnep_send_rsp(%struct.bnep_session*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
